--- a/index.html
+++ b/index.html
@@ -256,6 +256,6 @@
 </script>
 
 <script type="text/javascript" src="js/lib/xzdec.js"></script>
-<script type="text/javascript" data-main="js/init.js" src="js/lib/require.js"></script>
+<script type="text/javascript" data-main="js/init.js" src="node_modules/requirejs/require.js"></script>
 </body>
 </html>
