Implement zim file uploading
This commit brings in the ability to upload zim files to the SAFE
Network. When given the local path to the file, and the file name,
uploader.js can upload the given file to the users 'zim' 'folder' in
their _public container. To do this, the 'zim' MD is accessed through
NFS emulation and the target file is placed inside the MD with the
specified fileName.

So far, the interface for this process isn't very good. Status of the
process is output to console for now and any errors that occur can be
seen there too. A better mechanism for displaying to the user how things
are progressing will be added in due course. Possible tweaks to the
chunk-size used for uploading will probably be made too. A chunk size
of 1000000 bytes has been used as this is what Maidsafe have used in
their examples.

This is a huge step towards achieving this projects goal. I have adapted
the solution used in the web_hosting_manager example application, proper
attribution has been given in the license header.

--- a/html/index.html
+++ b/html/index.html
@@ -262,6 +262,10 @@
                 This application can read/write ZIM files to the SAFE Network. Please see the about section for more
                 information.
 
+                <div id="safeNetworkActivity" style="display: none;">
+                    <br/> Waiting on the SAFE Network... <img src="../img/spinner.gif" alt="Please wait..."/>
+                </div>
+
                 <button type="button" id="connectToSafe" class="btn btn-primary">Connect to network</button>
 
                 <span class="label label-warning" id="safeNetworkFailure">Not connected to the SAFE Network</span>
@@ -289,11 +293,26 @@
                     </form>
                 </div>
 
+                <div id="zimFileUploader" style="display: none;">
+                    You can now upload a ZIM file to the network.
+                    <form id="zimFileUpload">
+                        <div class="form-group">
+                            <label for="zimFile">Public name: </label>
+                            <input type="file" class="form-control" id="zimFile" accept=".zim">
+                        </div>
+                        <div class="form-group">
+                            <label for="fileName">File name:</label>
+                            <input type="text" class="form-control" id="fileName">
+                            <small class="form-text text-muted">Name your file carefully, this is the human readable
+                                name that will show to users.
+                            </small>
+                        </div>
+                        <button type="submit" class="btn btn-default">Upload</button>
+                    </form>
+                </div>
+
                 <span class="label label-info" id="zimFolderName" style="display : none;">Name</span>
 
-                <div id="safeNetworkActivity" style="display: none;">
-                    <br/> Waiting on the SAFE Network... <img src="../img/spinner.gif" alt="Please wait..."/>
-                </div>
             </div>
 
             <div id="openLocalFiles" style="display: none;">
