--- a/html/index.html
+++ b/html/index.html
@@ -257,6 +257,15 @@
         <div id="configuration" style="display: none;" class="category-padding">
             <h2>Configuration</h2>
 
+            <div class="btn-group" data-toggle="buttons">
+                <label class="btn btn-primary active">
+                    <input type="radio" name="options" id="defaultConfigToggle" autocomplete="off" checked> Default
+                </label>
+                <label class="btn btn-primary">
+                    <input type="radio" name="options" id="safeNetworkConfigToggle" autocomplete="off"> SAFE Network
+                </label>
+            </div>
+
             <div id="safeNetworkConfiguration" style="display: none;">
                 <h2>SAFE</h2>
                 This application can read/write ZIM files to the SAFE Network. Please see the about section for more
@@ -274,7 +283,25 @@
                 <span class="label label-warning" id="zimFolderNotExists">ZIM folder doesn't exist</span>
                 <span class="label label-success" id="zimFolderExists" style="display: none;">ZIM folder exists</span>
 
+                <div id="zimFileSelector" style="display: none;">
+                    <h3>Select a ZIM file</h3>
+                    Please select a zim file from the SAFE Network.
+                    <form id="openSafeZimFile">
+                        <div class="form-group">
+                            <label for="nfsName">Collection name: </label>
+                            <input type="text" class="form-control" id="nfsName">
+                            <small class="form-text text-muted">This is the name of the zim folder.</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="nfsFileName">Filename: </label>
+                            <input type="text" class="form-control" id="nfsFileName">
+                        </div>
+                        <button type="submit" class="btn btn-default">Load</button>
+                    </form>
+                </div>
+
                 <div id="zimFolderCreation" style="display: none;">
+                    <h3>Create your own ZIM folder</h3>
                     We will now create a folder for you to store ZIM files. The name you choose is important as this is
                     what other users will use to find your zim files!
                     <form id="createZimFolder">
@@ -294,6 +321,7 @@
                 </div>
 
                 <div id="zimFileUploader" style="display: none;">
+                    <h3>Upload a ZIM file</h3>
                     You can now upload a ZIM file to the network.
                     <form id="zimFileUpload">
                         <div class="form-group">
@@ -310,9 +338,6 @@
                         <button type="submit" class="btn btn-default">Upload</button>
                     </form>
                 </div>
-
-                <span class="label label-info" id="zimFolderName" style="display : none;">Name</span>
-
             </div>
 
             <div id="openLocalFiles" style="display: none;">
