Add the functionality to delete ZIM files
This commit brings in the functionality to delete a ZIM file that you
have previously uploaded to the SAFE network. Of course this will only
work with ZIM files that YOU have uploaded.

--- a/html/index.html
+++ b/html/index.html
@@ -338,6 +338,21 @@
                         <button type="submit" class="btn btn-default">Upload</button>
                     </form>
                 </div>
+
+                <div id="zimFileDeletion" style="display: none;">
+                    <h3>Delete a ZIM file</h3>
+                    This will only allow the deletion of a ZIM file you have uploaded to the network.
+                    <form id="zimFileDelete">
+                        <div class="form-group">
+                            <label for="fileNameForDelete">Filename:</label>
+                            <input type="text" class="form-control" id="fileNameForDelete">
+                            <small class="form-text text-muted">Specify the exact filename.
+                            </small>
+                        </div>
+                        <button type="submit" class="btn btn-default">Delete</button>
+                    </form>
+
+                </div>
             </div>
 
             <div id="openLocalFiles" style="display: none;">
