Fix branding and update README with ZIM info
This commit fixes some titles and headers that made it look like the app
was still Kiwix. The About section does need updating still.

I have added a small blurb to the README to indicate the usage of this
application.

--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Kiwix</title>
+    <title>SAFE Wiki</title>
     <meta name="description" content="Offline Wikipedia reader">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--
@@ -58,7 +58,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand">Kiwix 2.2-WIP</a>
+                <a class="navbar-brand">SAFE Wiki</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
